[gd_scene load_steps=4 format=2]

[ext_resource path="res://sound_scenes/random_audio_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_scenes/sound_slider.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=3]

[node name="SoundSlider" type="HSlider"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )
theme = ExtResource( 3 )
max_value = 1.0
step = 0.01
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_top = 42.0
margin_right = 161.0
margin_bottom = 62.0
text = "Test volume"

[node name="RandomAudioPlayer" parent="." instance=ExtResource( 1 )]
sound_count = 5
asset_path = "res://assets/sounds/eat/eat_%d.wav"
force_play = true

[connection signal="value_changed" from="." to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
